# FiveInRow

./: .gitignore  README.md
FiveInRow/: CMakeLists.txt
FiveInRow/src/launcher/: main.cpp
FiveInRow/src/lib/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameInterface.cpp  Repository.cpp  Repository.h  Server.cpp  Server.h  WinningConditions.cpp  WinningConditions.h
FiveInRow/src/lib/Models/: GameState.cpp  MessageType.cpp  Player.cpp
FiveInRow/tests/: CMakeLists.txt  GameEngineTest.cpp  RepositoryTest.cpp  WinningConditionsTest.cpp
FiveInRow/tests/Mocks/: ServerMock.cpp
FiveInRowClient/: CMakeLists.txt
FiveInRowClient/src/launcher/: main.cpp
FiveInRowClient/src/lib/: CMakeLists.txt  Client.cpp  Client.h  Constants.h  Game.cpp  Game.h  ProtocolHelper.cpp  ProtocolHelper.h
FiveInRowClient/src/lib/Exceptions/: ClientException.cpp
FiveInRowClient/src/lib/Models/: MessageType.cpp  Response.cpp
FiveInRowServer/: CMakeLists.txt
FiveInRowServer/src/launcher/: main.cpp
FiveInRowServer/src/lib/: BoardFormatter.cpp  BoardFormatter.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameInterface.cpp  GameInterface.h  IRepository.cpp  IRepository.h  ProtocolHelper.cpp  ProtocolHelper.h  Repository.cpp  Repository.h  Server.cpp  Server.h  WinningConditions.cpp  WinningConditions.h
FiveInRowServer/src/lib/Exceptions/: ServerException.cpp  ServerException.h
FiveInRowServer/src/lib/Models/: Coords.h  GameState.h  Player.h
FiveInRowServer/src/lib/Util/: RandomProvider.cpp  RandomProvider.h  StringUtil.cpp
FiveInRowServer/tests/: BoardFormatterTest.cpp  CMakeLists.txt  GameEngineTest.cpp  GameEngineTestSuite.cpp  RepositoryTest.cpp  WinningConditionsTest.cpp
FiveInRowServer/tests/Mocks/: BoardFormatterMock.h  GameInterfaceMock.h  RandomProviderMock.h  RepositoryMock.h  ServerMock.h  WinningConditionsMock.h
